...
                android:id="@+id/close_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="top|start"
                android:layout_margin="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Close"
                android:elevation="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
...
